"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-09-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98:
	  vpi-prsim.cc: in recent exception aggregation, missed one place
		to check for fatal errors in _advance_prsim.
		Now fixed.  Issue found by Virantha, ACX-PR-6694.


2011-09-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-97:
	  hacknet: added diagnostic options for when transistor width
		is clamped to min/max from config.
		options: below_min_width, exceed_max_width (warn|error).
	  Documented, added new test cases, updated existing ones
		with default warning.


2011-09-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-96b:
	  hacprsim: elaborated struct pull_set, and use it where possible
		instead of all the verbose error-prone pull expressions.


2011-09-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-96:
	  Fix ACX-PR-6650: missed interference diagnostic between weak rules.
		Patch is a quick-and-dirty hack, just patching corner case.
		Expect robust fix to come from prsim-engine-rewrite.


2011-09-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-95:
	  Batch of MAJOR prsim bug fixes (ACX-PR-{6655,6667}).
	  case cbit-02{,b}: previously missed pulling firing non-interfering 
		weak-rule, which left some nodes wrongly stuck at X.
	  case cbit-02c: unset failed to re-evaluate an X pull on a node,
		leaving an X-pulled node stuck at not-X!
		Also test for correct overtaking of X's behavior.
	  case cbit-02{d,e}: same as above, but cut off wordline to
		eliminate X-pull on otherwise weakly driven node.
	  Code fixes are all in the spaghetti-mess of corner-case handling 
		of event scenarios, which we hope to eliminate soon.


2011-09-06	David Fang		<fangism@users.sourceforge.net>
