@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2011-10-19	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-84-98-spice-verilog-01:
+	  Initial work on adding a spice-parser front-end, 
+		targeted for netlist (hacknet) data structures.
+		Plan is to produce some spice-to-{hac,verilog}
+		conversion utilities.
+
+
 2011-09-27	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-84-98:
